--- a/index.html
+++ b/index.html
@@ -2,99 +2,161 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Legal Pomodoro - AWS Deep Sprint</title>
+  <title>AWS Legal Consultancy Pomodoro</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #092143;
+      color: white;
       text-align: center;
-      padding: 20px;
-      background: #f5f5f5;
-      color: #333;
+      padding: 50px;
     }
-    .timer {
+    h1 {
+      margin-bottom: 20px;
+    }
+    #timer {
       font-size: 60px;
-      margin: 30px 0;
+      margin: 20px 0;
     }
-    button {
-      font-size: 18px;
+    .button {
+      background-color: #fff;
+      color: #092143;
       padding: 10px 25px;
       margin: 10px;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .task-section {
+      margin-top: 40px;
+    }
+    input[type="text"] {
+      padding: 8px;
+      font-size: 14px;
+      border-radius: 6px;
+      border: none;
+      margin-right: 10px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 5px 0;
+    }
+    .remove {
+      margin-left: 15px;
+      color: #ff7373;
       cursor: pointer;
     }
-    #start { background-color: #0d6efd; color: white; }
-    #pause { background-color: #ffc107; color: black; }
-    #reset { background-color: #dc3545; color: white; }
-    #toggleMode { background-color: #6c757d; color: white; }
   </style>
 </head>
 <body>
-  <h2> Billable Sprint Mode</h2>
-  <div class="timer" id="timer">25:00</div>
-  <button id="start">Start Billable Sprint</button>
-  <button id="pause">Adjourn</button>
-  <button id="reset">Reset Docket</button>
-  <br>
-  <button id="toggleMode">Switch to 50/10</button>
+  <h1>Aws Legal Consultancy Pomodoro</h1>
+  <div id="modeLabel">Billable Sprint (25:00)</div>
+  <div id="timer">25:00</div>
+  <button class="button" onclick="startTimer()">Start Billable Sprint</button>
+  <button class="button" onclick="startBreak()">Adjourn (Break)</button>
+  <button class="button" onclick="resetTimer()">Reset Docket</button>
+  <button class="button" onclick="toggleMode()">Switch to 50/10</button>
 
-  <audio id="alarm">
-    <source src="https://www.soundjay.com/button/beep-07.wav" type="audio/wav">
-  </audio>
+  <div class="task-section">
+    <h3>Active Case Files</h3>
+    <input type="text" id="taskInput" placeholder="Add a case or task...">
+    <button class="button" onclick="addTask()">Add</button>
+    <ul id="taskList"></ul>
+  </div>
+
+  <audio id="alarm" src="https://notificationsounds.com/notification-sounds/eventually-590/download/mp3"></audio>
 
   <script>
-    let seconds = 1500;
-    let interval = null;
-    let is50Mode = false;
-    const timerDisplay = document.getElementById("timer");
-    const alarm = document.getElementById("alarm");
+    let isRunning = false;
+    let isBreak = false;
+    let interval;
+    let duration = 25 * 60;
+    let timeLeft = duration;
+    let usingLongMode = false;
 
-    function updateTimer() {
-      const mins = String(Math.floor(seconds / 60)).padStart(2, '0');
-      const secs = String(seconds % 60).padStart(2, '0');
-      timerDisplay.textContent = `${mins}:${secs}`;
+    function updateDisplay() {
+      const minutes = Math.floor(timeLeft / 60);
+      const seconds = timeLeft % 60;
+      document.getElementById("timer").innerText = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
     }
 
     function startTimer() {
-      if (interval) return;
+      if (isRunning) return;
+      isRunning = true;
+      isBreak = false;
+      document.getElementById("modeLabel").innerText = usingLongMode ? "Deep Focus Mode (50:00)" : "Billable Sprint (25:00)";
       interval = setInterval(() => {
-        if (seconds > 0) {
-          seconds--;
-          updateTimer();
-        } else {
+        if (timeLeft <= 0) {
           clearInterval(interval);
-          interval = null;
-          alarm.play();
-          alert("⏰ Time's up! Take your legal recess");
+          document.getElementById("alarm").play();
+          autoBreak();
+        } else {
+          timeLeft--;
+          updateDisplay();
         }
       }, 1000);
     }
 
-    document.getElementById("start").onclick = startTimer;
-
-    document.getElementById("pause").onclick = () => {
+    function startBreak() {
       clearInterval(interval);
-      interval = null;
-    };
+      isRunning = true;
+      isBreak = true;
+      document.getElementById("modeLabel").innerText = "Adjournment (5:00)";
+      timeLeft = 5 * 60;
+      updateDisplay();
+      interval = setInterval(() => {
+        if (timeLeft <= 0) {
+          clearInterval(interval);
+          document.getElementById("alarm").play();
+          resetTimer();
+        } else {
+          timeLeft--;
+          updateDisplay();
+        }
+      }, 1000);
+    }
 
-    document.getElementById("reset").onclick = () => {
+    function autoBreak() {
+      setTimeout(() => {
+        startBreak();
+      }, 500);
+    }
+
+    function resetTimer() {
       clearInterval(interval);
-      interval = null;
-      seconds = is50Mode ? 3000 : 1500;
-      updateTimer();
-    };
+      isRunning = false;
+      isBreak = false;
+      timeLeft = usingLongMode ? 50 * 60 : 25 * 60;
+      document.getElementById("modeLabel").innerText = usingLongMode ? "Deep Focus Mode (50:00)" : "Billable Sprint (25:00)";
+      updateDisplay();
+    }
 
-    document.getElementById("toggleMode").onclick = () => {
-      is50Mode = !is50Mode;
-      clearInterval(interval);
-      interval = null;
-      seconds = is50Mode ? 3000 : 1500;
-      document.querySelector("h2").innerText = is50Mode ? "Deep Focus Mode (50/10)" : "Billable Sprint Mode";
-      document.getElementById("toggleMode").textContent = is50Mode ? "Switch to 25/5" : "Switch to 50/10";
-      updateTimer();
-    };
+    function toggleMode() {
+      usingLongMode = !usingLongMode;
+      resetTimer();
+      document.querySelector(".button[onclick='toggleMode()']").innerText = usingLongMode ? "Switch to 25/5" : "Switch to 50/10";
+    }
 
-    updateTimer();
+    function addTask() {
+      const input = document.getElementById("taskInput");
+      const value = input.value.trim();
+      if (value === "") return;
+      const li = document.createElement("li");
+      li.innerHTML = `${value} <span class='remove' onclick='removeTask(this)'>&times;</span>`;
+      document.getElementById("taskList").appendChild(li);
+      input.value = "";
+    }
+
+    function removeTask(el) {
+      el.parentElement.remove();
+    }
+
+    updateDisplay();
   </script>
 </body>
 </html>
