--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legal Pomodoro Pro</title>
+  <title>AWS Legal Consultancy Pomodoro</title>
   <style>
     body {
       background-color: #092143;
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <h1>Legal Pomodoro Pro</h1>
+  <h1>AWS Legal Consultancy Pomodoro</h1>
 
   <div class="timer" id="timer">25:00</div>
   <div class="buttons">
